css/myaccount.css
:root {
    --white: #FFF;
    --dark: #322E40;
    --gray: #D7D4E6;
    --green: #A0B17D;
}

.title-my-account h1 {
    padding: 0;
    font-size: 4rem;
}

.bg-image-my-account {
    height: 300px;
}

.title-my-account {
    padding: 0;
}

#my-account {
    padding: 3rem;
    margin: 0;
    background-color: var(--green);
    text-align: center;
}

h2 {
    font-size: 3rem;
}

.my-user-info p {
    font-size: 0.9rem;
}

.profile-image-circle {
    height: 250px;
    width: 250px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    background-position-x: center;
    background-size: cover;
    background-image: url(https://avatars.githubusercontent.com/u/101054274?v=4);
}

.my-user-info {
    display: flex;
    gap: 1rem;
    justify-content: space-evenly;
    text-align: left;
}

.my-user-info a {
    color: black;
}

.my-user-info a:hover {
    text-decoration: underline;
}

.change-images-box {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.profile-image-box {
    text-align: center;
}

